apng jpeg encoding transmission reconstruction almost done

--- a/direwolf-loopback-DRAFT.conf
+++ b/direwolf-loopback-DRAFT.conf
@@ -143,7 +143,7 @@ CHANNEL 0
 # 
 # Enter your callsign and and SSID 1, for example, mine would be KK6MRI-1
 
-MYCALL EE1235-1
+MYCALL EE123_CALL
 
 #
 # Pick a suitable modem speed based on your situation.
@@ -369,7 +369,7 @@ IGSERVER igen2.eecs.berkeley.edu
 # Fill in your call sign instead of XXXXXX-1
 
 
-IGLOGIN EE1235-1 13472
+IGLOGIN EE123_CALL EE123_PASSCODE
 
 # That's all you need for a receive only IGate which relays
 # messages from the local radio channel to the global servers.
@@ -386,7 +386,7 @@ IGLOGIN EE1235-1 13472
 # CAREFUL! The position is reported in Degrees-DecimalMinutes format, which is not usually displayed when you look up a location.
 # Copy/Paste the GPS coordinate format from the Jupyter notebook. 
 
-PBEACON sendto=IG delay=0:30 every=10:00 symbol="igate" overlay=R lat=37^51.05N long=122^15.65W comment="git"
+PBEACON sendto=IG delay=0:30 every=10:00 symbol="igate" overlay=R EE123_LATCOORD EE123_LONGCOORD EE123_COMMENT
 
 
 # To relay messages from the Internet to radio, you need to add
